modified to be decoupled style

--- a/client/src/Gallery/Gallery.css
+++ b/client/src/Gallery/Gallery.css
@@ -4,7 +4,7 @@
     padding: 0 auto; */
     font-family: "Arial" !important;
 }
-.gallery-banner {
+.Gallery .gallery-banner {
     height: 300px;
     background-image: url('./img/gallery_banner.png');
     background-repeat: no-repeat;
@@ -12,65 +12,65 @@
     
 }
 
-.banner-text-col{
+.Gallery .banner-text-col{
     margin-top: 4.5em;
 }
 
-.banner-text {
+.Gallery .banner-text {
     transform: translateY(80%);
     color: #ffffff;   
     text-align: center;
 }
-.banner-text > h1 {
+.Gallery .banner-text > h1 {
     font-size: 50px;
     padding: 0px;
     font-weight: bold;
 }
-.banner-text > h6 {
+.Gallery .banner-text > h6 {
     font-size: 20px;
 }
-.card{
+.Gallery .card{
     width: 18rem; 
     padding-bottom: 200px;
 }
 
 
-.exhibit-description {
+.Gallery .exhibit-description {
     font-family: "Arial";
 }
 
-.target-exhibit-kenji {
+.Gallery .target-exhibit-kenji {
   cursor: pointer;
 }
 
-.target-exhibit-kenji:hover {
+.Gallery .target-exhibit-kenji:hover {
   opacity: 0.5;
 }
 
-.poster-title{
+.Gallery .poster-title{
     font-weight: bolder;
 }
-.row > .shadow {
+.Gallery .row > .shadow {
     height: 500px;
     width: 500px;
     cursor: pointer;
 }
-.poster {
+.Gallery .poster {
     border: 3px solid black;
     cursor: pointer;
     width: 450px;
     height: 400px;
 }
-a {
+.Gallery a {
     text-decoration: none;
 }
-a:link,a:visited,a:hover,a:active {
+.Gallery a:link,.Gallery a:visited,.Gallery a:hover,.Gallery a:active {
     text-decoration: none;
     color: black;
 }
 
 @media only screen and (max-width: 600px) {
-    .col{
+    .Gallery .col{
         margin-bottom: 15px;
     }
 }
