--- a/client/src/Home/Home.css
+++ b/client/src/Home/Home.css
@@ -9,19 +9,62 @@
     object-position: center;
 } */
 
-.carousel {
+.Home .carousel {
     height: auto;
 }
-.carousel img {
+.Home .carousel img {
     width: 100%;
     height: auto;
 }
-.main-prod-container {
-    background-color: white;
-    /* box-shadow: 2px 6px 5px 0px #a29999; */
 
+.Home .prod-container > img {
+    height: 150px;
 }
-.feat-title {
+
+.Home .prod-img {
+    word-break: break-word;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    line-height: 16px; /* fallback */
+    -webkit-line-clamp: 9; /* number of lines to show */
+    -webkit-box-orient: vertical;
+}
+
+.Home .innovator-container {
+    width: fit-content !important;
+    background-color: blue !important;
+}
+.Home .innovator-row {
+    width: fit-content !important;
+    background-color: red !important;
+}
+
+.Home .innovator-description {
+    word-break: break-word;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    line-height: 25px; 
+    -webkit-line-clamp: 8; 
+    -webkit-box-orient: vertical;
+}
+
+.Home .articles {
+    overflow: scroll;
+    overflow-x: hidden;
+    height: 400px;
+    background-color: white;
+    height: 555px;
+}
+
+@media (min-width: 767px) {
+    .Home .vl {
+        border-right: 1px solid #FDDA0D;
+    }
+}
+
+/* .feat-title {
     color: #000;
 }
 .feat-prod {
@@ -37,33 +80,20 @@
     width: 100%;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
-    /* object-fit: cover; */
 }
 .card-innovator > img {
     height: auto;
     width: 50%;
 }
 
-/* .prod > .prod-container > img {
-    object-fit: cover;
-    height: 100px;
-    width: 300px;
-}
-.prod-img > img {
-    height: 150px;
-    width: 500px;
-    object-fit: cover;
-
-} */
- 
 
 .innovator-p {
     word-break: break-word;
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
-   line-height: 16px; /* fallback */
-   -webkit-line-clamp: 20; /* number of lines to show */
+   line-height: 16px; 
+   -webkit-line-clamp: 20; 
    -webkit-box-orient: vertical;
 }
 .articles {
@@ -71,7 +101,6 @@
     overflow-x: hidden;
     height: 400px;
     background-color: white;
-    /* box-shadow: 2px 6px 5px 0px #a29999; */
 
 }
 .articles > img {
@@ -96,7 +125,6 @@
 div.contact {
     height: 300px;
     width: 100%;
-    /* background-image: url(../../img/exhibits-banner.jpg); */
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -117,13 +145,11 @@ div.contact {
        overflow: hidden;
        text-overflow: ellipsis;
        display: -webkit-box;
-       line-height: 16px; /* fallback */
-       -webkit-line-clamp: 10; /* number of lines to show */
+       line-height: 16px; 
+       -webkit-line-clamp: 10; 
        -webkit-box-orient: vertical;
     }
-    /* .col-sm-6 > img {
-        height: 200px;
-    } */
+    
     .articles  img {
         max-width: 250px;
     }
@@ -131,7 +157,7 @@ div.contact {
         height: 300px;
         width: 100%;
     }
-}
+} */
 @media (max-width: 576px) {
     .carousel {
         height: auto;
