--- a/client/src/Exhibits/Exhibit/style/Search.css
+++ b/client/src/Exhibits/Exhibit/style/Search.css
@@ -1,4 +1,4 @@
-.search {
+/* .search {
     position: relative;
     box-shadow: 0 0 40px rgba(51, 51, 51, .1);
   }
@@ -62,4 +62,4 @@
       margin-left: auto;
       margin-right: auto;
     }
-}
+} */
