--- a/client/src/NavBar/NavBar.css
+++ b/client/src/NavBar/NavBar.css
@@ -7,6 +7,8 @@
     height: fit-content;
    
   }
+
+
  
   .Navbar .account {
     background-color: #414950;
@@ -26,13 +28,13 @@
   .account .container {
     background-color: #49495B;
   }
-  .Navbar .logo {
+  /* .Navbar .logo {
     background-image: url(./img/LOGO_WAVE2.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-color: #49495B;
     height: 8rem
-  }
+  } */
   .Navbar .navbar {
     background-color: #49495B;
   }
@@ -44,8 +46,20 @@
     text-decoration: none;
   }
   .Navbar .active {
-    color: yellow;
+    color: #49495B;
   }
+
+  .Navbar .navbar-dark .navbar-nav .nav-link {
+    color: black;
+  }
+  .Navbar .navbar-dark .navbar-nav .nav-link:hover {
+    color: rgb(60, 54, 54);
+  }
+
+  .Navbar .wave-logo {
+    z-index: 1;
+  }
+
  
 
   /* .container-fluid {       
