--- a/client/src/Exhibits/Exhibit/Product/style/Product.css
+++ b/client/src/Exhibits/Exhibit/Product/style/Product.css
@@ -1,4 +1,4 @@
-.prod-container {
+/* .prod-container {
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 .main-img-container {
@@ -90,4 +90,4 @@
         height: 40px;
         width: 100%;
     }
-}
+} */
