--- a/client/src/Home/Home.css
+++ b/client/src/Home/Home.css
@@ -8,18 +8,32 @@
     background-color: #F2F2F2;    
 
 }
-/* .carousel-item > img {
-    object-fit: cover;
-    object-position: center;
-} */
+
+.bgBlue{
+    background-image: url(./img/bgWaveblue.svg);
+    background-repeat: no-repeat;
+    height: 80vh;
+    object-fit: center;
+    background-size: cover;
+}
+
+
 .Home .hero {
-    background-image: url(./img/hero.png);
+    background-image: url(./img/NU\ MANILA.png);
     background-repeat: no-repeat;
     height: 100vh;
     object-fit:center;
     background-position: center;
     background-size: cover;
+}   
+.textH{
+    font-family:  futura;
+    font-size: 180px;
+    padding: 10%;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4); 
+    
 }
+
 
 .Home .innovator {
     background-image: url(./img/ino1.png);
