--- a/client/src/Footer/Footer.css
+++ b/client/src/Footer/Footer.css
@@ -1,10 +1,10 @@
 .Footer {
-  background-image: url(./img/bgfooter.svg);
+  /* background-image: url(./img/bgfooter.svg);
   background-repeat: no-repeat;
-  object-fit: center;
-  height: 36vh;
-  background-size: cover;
-  background-color: #F2F2F2;    
+  object-fit: center; */
+  /* height: 36vh; */
+  /* background-size: cover; */
+  background-color: #4d4a4a;    
 
 }
 
