--- a/client/src/Home/Home.css
+++ b/client/src/Home/Home.css
@@ -5,31 +5,34 @@
     max-width: 100% !important;
     
    
-    background-color: #F2F2F2;    
+    /* background-color: #F2F2F2;     */
 
 }
 
-.bgBlue{
+/* .bgBlue{
     background-image: url(./img/bgWaveblue.svg);
     background-repeat: no-repeat;
     height: 80vh;
     object-fit: center;
     background-size: cover;
-}
+} */
 
 
 .Home .hero {
-    background-image: url(./img/NU\ MANILA.png);
-    background-repeat: no-repeat;
-    height: 100vh;
-    object-fit:center;
-    background-position: center;
-    background-size: cover;
-}   
+    /* background-image: url(./img/creative-banner.png);
+    background-repeat: no-repeat; */
+    height: 80vh;
+    /* object-fit:center; */
+    /* background-position: center;
+    background-size: cover; */
+}
+.Home .hero img {
+    height: 80vh;
+    width: 100%;
+}
 .textH{
     font-family:  futura;
-    font-size: 180px;
-    padding: 10%;
+    font-size: 15vw;
     text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4); 
     
 }
@@ -93,9 +96,9 @@
     z-index: -1;
     transform: scaleY(.5);
 } */
-.row h5 {
+/* .row h5 {
     font-size: 36px;
-}
+} */
 
 .Home .logo-about {
     height: 10rem;
