--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,11 +13,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-body {
+/* body {
   position: relative;
 }
 @media  only screen and (max-width: 992px){
   body {
     position: relative;
   }
-}
+} */
