--- a/client/src/Footer/Footer.css
+++ b/client/src/Footer/Footer.css
@@ -4,7 +4,7 @@
   object-fit: center; */
   /* height: 36vh; */
   /* background-size: cover; */
-  background-color: #4d4a4a;    
+  background-color: #eeeeee;    
 
 }
 
