--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,7 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
   max-width: 100%;
+  scroll-behavior: smooth;
 }
 
 code {
