--- a/client/src/Home/Home.css
+++ b/client/src/Home/Home.css
@@ -3,6 +3,7 @@
     margin: 0 auto;
     padding: 0 auto;
     max-width: 100% !important;
+    font-family: "Arial" !important;
     
    
     /* background-color: #F2F2F2;     */
