--- a/client/src/NavBar/NavBar.css
+++ b/client/src/NavBar/NavBar.css
@@ -7,7 +7,9 @@
     /* position: fixed;
     z-index: 1; */
   }
-  
+  .Navbar .navbar-toggler {
+    border: none !important;
+  }
   .Navbar .signIn {
     width: fit-content;
   }
